[project]
name = "nominal-garmin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "fitdecode>=0.10.0",
    "garminconnect>=0.2.25",
    "garth>=0.4.47",
    "mypy>=1.14.1",
    "nominal>=1.25.0",
    "pandas>=2.2.3",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
]

[tool.mypy]
strict = true
packages = ["nominal-garmin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
